<resources>
    <string name="app_name">Saveetha Task Doer</string>
    <string name="default_notification_channel_id">Saveetha Task Doer</string>

    <!-- common alert realted -->
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Annuler</string>
    <string name="alert_continue">Continuer</string>
    <string name="alert_yes">Oui</string>
    <string name="alert_no">Non</string>
    <string name="alert_field_required">Champs obligatoires</string>
    <string name="alert_invalid_phone">Numéro de téléphone invalide</string>
    <string name="alert_no_network">Une erreur est survenue. Vérifiez votre connexion internet</string>

    <!--Login Related-->
    <string name="login">Login</string>
    <string name="login_username_label">Email</string>
    <string name="login_password_label">Password</string>
    <string name="login_forget_password_label">Forgotten?</string>
    <string name="login_label">Login</string>
    <string name="forget_submit_latbel">Submit</string>

    <!--Register Related-->
    <string name="registration">Registration</string>
    <string name="register_label">Register</string>
    <string name="create_account">Create an account</string>
    <string name="register_profile_type_label">Profile type Studied Staff</string>
    <string name="register_name_label">Name</string>
    <string name="register_college_id_label">College Id</string>
    <string name="register_email_label">Email</string>
    <string name="register_password_label">Password</string>
    <string name="register_confirm_password_label">Confirm Password</string>
    <string name="register_department_label">Department</string>
    <string name="register_year_label">Year</string>

    <string-array name="college_year_array">
        <item>Choose Year</item>
        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
        <item>Fourth Year</item>
    </string-array>

    <string-array name="year_array">
        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
        <item>Fourth Year</item>
    </string-array>

    <string-array name="college_department_array">
        <item>Choose your department</item>
        <item>CSE</item>
        <item>EEE</item>
        <item>ECE</item>
        <item>MECH</item>
        <item>CIVIL</item>
        <item>IT</item>
    </string-array>

    <string-array name="college_profile_array">
        <item>Choose profile type</item>
        <item>Student</item>
        <item>Staff</item>
        <item>HOD</item>
        <item>Principal</item>
    </string-array>

    <string-array name="leave_array">
        <item>Choose leave type</item>
        <item>Fever</item>
        <item>Sick</item>
        <item>Marriage function</item>
        <item>Vacation</item>
    </string-array>

    <string name="bonofide">Bonafide Certificate</string>
    <string name="leave_letter">Leave Letter</string>
    <string name="food">Order Food</string>
    <string name="track_bus">Track Your Bus</string>
    <string name="complaint">Lodge Your Complaint</string>
    <string name="n_works_1_place">N Works, 1 Place</string>
    <string name="title_activity_leave_list">Leave List</string>
    <string name="title_activity_leave_create">Apply Leave</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="date">Date</string>
    <string name="accept_to_forward_this_letter_to_class_advisor">Accept to forward this letter to class advisor</string>
    <string name="subject">Subject</string>
    <string name="title_activity_staff_home">Staff</string>
    <string name="title_activity_hodhome">HOD</string>
    <string name="title_activity_review">Review</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="reject_reason">Reject Reason</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="print">Print</string>
    <string name="title_activity_principal_home">Principal</string>
    <string name="title_activity_bonofide">Bonofide</string>
    <string name="title_activity_apply_bonofide">Apply Bonofide</string>
    <string name="father_name">Father Name</string>
    <string name="title_activity_staff">Staff</string>
    <string name="title_activity_food_shop">Shops</string>
    <string name="title_activity_hod">HOD</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_activity_home">Student</string>
    <string name="forget_password">Forget Password</string>
    <string name="class_adviser">Class Adviser</string>
    <string name="title_activity_product">Products</string>
    <string name="title_activity_cart">My Cart</string>
    <string name="place_order">Place Order</string>
    <string name="my_order">My Orders</string>
    <string name="title_activity_my_order">My Orders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bonofide_review">Bonofide Review</string>
    <string name="attendance">Attendance</string>
    <string name="_5th_period">5th Period</string>
    <string name="_6th_period">6th Period</string>
    <string name="_4th_period">4th Period</string>
    <string name="_3rd_period">3rd Period</string>
    <string name="_2nd_period">2nd Period</string>
    <string name="_1st_period">1st Period</string>
    <string name="first_year">First Year</string>
    <string name="third_year">Third Year</string>
    <string name="fourth_year">Fourth Year</string>
    <string name="second_year">Second Year</string>
    <string name="title_activity_period">Periods</string>
    <string name="title_activity_year">Choose Year</string>
    <string name="choose_file">Choose File</string>

    <string-array name="choose_array">
        <item>Images</item>
        <item>PDF</item>
    </string-array>
</resources>
