<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ReviewActivity"
        tools:showIn="@layout/activity_review">

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/etRejectReason"
            android:clipToPadding="false"
            android:padding="@dimen/spacing_normal" />

        <EditText
            android:id="@+id/etRejectReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/radioGroup"
            android:layout_margin="@dimen/spacing_normal"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/reject_reason"
            android:textSize="@dimen/font_medium"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_normal"
            android:visibility="gone"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/accept"
                android:textSize="@dimen/font_medium" />

            <RadioButton
                android:id="@+id/reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/reject"
                android:textSize="@dimen/font_medium" />
        </RadioGroup>
    </RelativeLayout>
</layout>