<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".attendance.PeriodActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/period1"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:background="@color/color_primary"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/_1st_period"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/period2"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="@dimen/spacing_small"
                        android:background="@color/color_primary"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/_2nd_period"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/period3"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:background="@color/color_primary"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/_3rd_period"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/period4"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="@dimen/spacing_small"
                        android:background="@color/color_primary"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/_4th_period"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/period5"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:background="@color/color_primary"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/_5th_period"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/period6"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="@dimen/spacing_small"
                        android:background="@color/color_primary"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/_6th_period"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/linearProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ProgressBar
                style="@style/Base.Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>