<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/clLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Splash.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tbLogin"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="?android:attr/colorPrimary"
                app:popupTheme="@style/AppTheme.Splash.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nsvLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/window_background">

            <LinearLayout
                android:id="@+id/llLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etLoginUserName"
                    style="@style/AppLoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/login_username_label"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:paddingBottom="@dimen/spacing_normal"
                    android:text=""
                    app:theme="@style/ThemeEditTextConnection" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginEnd="@dimen/spacing_medium">

                    <EditText
                        android:id="@+id/etLoginPassword"
                        style="@style/AppLoginEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/login_password_label"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingStart="@dimen/spacing_empty"
                        android:paddingEnd="@dimen/spacing_extra_huge"
                        android:paddingBottom="@dimen/spacing_normal"
                        android:text=""
                        app:theme="@style/ThemeEditTextConnection" />

                    <TextView
                        android:id="@+id/tvLoginForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/roboto_light"
                        android:paddingStart="@dimen/spacing_small"
                        android:paddingTop="@dimen/spacing_little"
                        android:paddingEnd="@dimen/spacing_empty"
                        android:paddingBottom="@dimen/spacing_small"
                        android:text="@string/login_forget_password_label"
                        android:textColor="@color/color_primary_dark"
                        android:textSize="@dimen/font_small"
                        android:visibility="gone" />
                </RelativeLayout>

                <android.support.v7.widget.CardView
                    android:id="@+id/cvLoginConnexion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/color_primary"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/login_label"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_medium" />

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/roboto_bold"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/create_account"
                    android:textColor="@color/dark_black"
                    android:textSize="@dimen/font_large" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/linearProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ProgressBar
                style="@style/Base.Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>
